[metadata]
name = fast_map
version = 0.0.4
author = Michal Borowski
author_email = michalmonday17@gmail.com
description = Combines multiprocessing and multithreading for fast computation.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/michalmonday/fast_map
project_urls = 
    Bug Tracker = https://github.com/michalmonday/fast_map/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
